# ld56

./: .gitignore  Cargo.toml  index.html
assets/: sprites.aseprite
docs/: index.html  ld56-3ca667794a6eaeb4.js  ld56-6cd635b016c6cb39.js  ld56-7bc99f17bb23035b.js  ld56-f919239b47c7b8e0.js
scripts/: serve.sh  web.sh
src/: main.rs  params.rs  resources.rs  souls.rs  state.rs
web/: index.html  ld56-6cd635b016c6cb39.js
