[package]
name = "ld56"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies.rkit]
path = "../rkit"
#git = "https://github.com/Nazariglez/rkit"
#rev = "3ca8267"
default-features = false
features = [
    "random",
    "draw",
    "draw-default-font",
    "audio",
    "webgl"
]

[dependencies]
num = "0.4.3"
rustc-hash = "2.0.0"
strum_macros = "0.26.4"
strum = "0.26.3"
static_aabb2d_index = "2.0.0"
